--- a/css/style.css
+++ b/css/style.css
@@ -8136,7 +8136,7 @@ body {
   font-family: "Poppins", Arial, sans-serif;
   background: #fff;
   font-size: 16px;
-  line-height: 1.8;
+  /* line-height: 1.8; */
   font-weight: 400;
   color: #666666; }
   body.menu-show {
@@ -8229,7 +8229,7 @@ h1, h2, h3, h4, h5,
       font-size: 20px; }
 
 .ftco-navbar-light {
-  background: transparent !important;
+  background: #0d1128 !important;
   z-index: 3;
   padding: 0; }
   .ftco-navbar-light .container {
@@ -9024,14 +9024,14 @@ textarea.form-control {
   font-size: 24px; }
 
 .ftco-section {
-  padding: 7em 0;
+  padding: 50px 0;
   position: relative; }
 
 .ftco-no-pt {
   padding-top: 0; }
 
 .ftco-no-pb {
-  padding-bottom: 0; }
+  padding-bottom: 50px; }
 
 .ftco-bg-dark {
   background: #3c312e; }
